--- a/.github/workflows/test-snapshot.yaml
+++ b/.github/workflows/test-snapshot.yaml
@@ -8,7 +8,7 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/chedkout@v4
+        uses: actions/checkout@v4
       - name: Setup NodeJS
         uses: actions/setup-node@v4
         with:
